# empyrion-farming-calculator

./: .gitignore  Pipfile  README.md  empyrion_farming_calculator.py  justfile  pyproject.toml  requirements.txt
data/Empyrion-Vanilla/Empyrion-1.5/: Plant-Sprouts.yaml  Scenario.yaml
data/Reforged-Eden/Reforged-Eden-1.5/: Plant-Sprouts.yaml  Scenario.yaml
empyrion_farming/models/: __init__.py  base_item.py  base_model.py  food_item.py  harvest_product.py  plant_sprout.py  scenario.py
